--- a/source/manifest.json
+++ b/source/manifest.json
@@ -4,7 +4,7 @@
 	"version": "1.0",
 	"description": "Replaces the term 'migrant' (and its cognates) with 'expat' (and its cognates). Derivative of cloud-to-butt.",
 	"icons": {
-	  "48": "icons/suitcase-48.png"
+	  "48": "images/logo.png"
 	},
 	"content_scripts":
 	[
